# project

./: .gitignore  Untitled.ipynb  Untitled1.ipynb  Untitled4.ipynb  pyproject.toml
.ipynb_checkpoints/: RNN_LSTM-checkpoint.ipynb  Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  Untitled3-checkpoint.ipynb  Untitled4-checkpoint.ipynb
data/: btcusd.csv  dataset.csv
